--- a/index.html
+++ b/index.html
@@ -63,13 +63,19 @@
             z-index: 1000; backdrop-filter: blur(6px);
         }
 
-        #result-card {
-            width: 85%; max-width: 400px;
-            background: #fff; border-radius: 30px;
-            padding: 50px 35px; text-align: center;
-            box-sizing: border-box;
-            animation: cardPop 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        }
+		#result-card {
+			width: 85%; max-width: 400px;
+			background: rgba(255, 255, 255, 0.9); /* 基础背景是接近纯白的半透明 */
+			backdrop-filter: blur(10px);         /* 增加毛玻璃感 */
+			border-radius: 30px;
+			padding: 50px 35px;
+			text-align: center;
+			box-sizing: border-box;
+			border: 4px solid #fff;              /* 纯白外框 */
+			box-shadow: 0 20px 50px rgba(0,0,0,0.15);
+			animation: cardPop 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+			transition: all 0.3s ease;
+		}
 
         @keyframes cardPop {
             from { transform: scale(0.8); opacity: 0; }
