--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>本丸近侍日历 - 完美视觉成就版</title>
+    <title>本丸近侍日历</title>
     <style>
         :root {
             --primary-red: #d32f2f;
@@ -353,4 +353,5 @@
     renderEverything();
 </script>
 </body>
+
 </html>
